--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y g++ make libgtest-dev
+        sudo apt-get install libeigen3-dev
 
     - name: Build project
       run: make
